# wordup

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  COPYRIGHT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
instance/: wordup.db
scripts/: create_release.sh  run_tests.sh  sync_version.py
src/: __version__.py  app.py
src/models/: __init__.py
src/routes/: admin.py  cards.py  chapters.py  learning.py  main.py
src/services/: srs.py  theming.py
src/static/: app.js  style.css
src/templates/: base.html  dashboard.html  help.html
src/templates/admin/: dashboard.html  import.html  theming.html
src/templates/cards/: bulk_import.html  detail.html  form.html  list.html
src/templates/chapters/: detail.html  form.html  list.html
src/templates/learning/: complete.html  review.html  setup.html
src/wordup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_app.py  test_models.py  test_routes.py  test_srs.py
