[project]
name = "wordup"
version = "1.0.0"
description = "A vocabulary trainer with Spaced Repetition System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Baumhauer"}
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "python-dotenv>=1.0.0"
]
